3689.	[bug]		Fixed a bug causing an insecure delegation from one
			static-stub zone to another to fail with a broken
			trust chain. [RT #35081]

3688.	[bug]		loadnode could return a freed node on out of memory.
			[RT #35106]

3687.	[bug]		Address null pointer dereference in zone_xfrdone.
			[RT #35042]

3686.	[func]		"dnssec-signzone -Q" drops signatures from keys
			that are still published but no longer active.
			[RT #34990]

3685.	[bug]		"rndc refresh" didn't work correctly with slave
			zones using inline-signing. [RT #35105]

3684.	[bug]		The list of included files would grow on reload.
			[RT 35090]

3683.	[cleanup]	Add a more detailed "not found" message to rndc
			commands which specify a zone name. [RT #35059]

3682.	[bug]		Correct the behavior of rndc retransfer to allow
			inline-signing slave zones to retain NSEC3 parameters
			instead of reverting to NSEC. [RT #34745]

3681.	[port]		Update the Windows build system to support feature
			selection and WIN64 builds.  This is a work in
			progress. [RT #34160]

3680.	[bug]		Ensure buffer space is available in "rndc zonestatus".
			[RT #35084]

3679.	[bug]		dig could fail to clean up TCP sockets still
			waiting on connect(). [RT #35074]

3678.	[port]		Update config.guess and config.sub. [RT #35060]

3677.	[bug]		'nsupdate' leaked memory if 'realm' was used multiple
			times.  [RT #35073]

3676.	[bug]		"named-checkconf -z" now checks zones of type
			hint and redirect as well as master. [RT #35046]

3675.	[misc]		Provide a place for third parties to add version
			information for their extensions in the version
			file by setting the EXTENSIONS variable.

	--- 9.10.0a1 released ---

3674.	[bug]		RPZ zeroed ttls if the query type was '*'. [RT #35026]

3673.	[func]		New "in-view" zone option allows direct sharing
			of zones between views. [RT #32968]

3672.	[func]		Local address can now be specified when using
			dns_client API. [RT #34811]

3671.	[bug]		Don't allow dnssec-importkey overwrite a existing