@@ -14,8 +14,6 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: named.conf,v 1.5 2011/07/28 03:18:17 each Exp $ */
-
 // NS4
 
 controls { /* empty */ };
@@ -31,6 +29,15 @@ options {
 	recursion yes;
 	empty-zones-enable yes;
 	disable-empty-zone 20.172.in-addr.arpa;
+};
+
+key rndc_key {
+	secret "1234abcd8765";
+	algorithm hmac-sha256;
+};
+
+controls {
+        inet 10.53.0.7 port 9953 allow { any; } keys { rndc_key; };
 };
 
 zone "." {
